--- a/styles/luckySevens.css
+++ b/styles/luckySevens.css
@@ -1,3 +1,50 @@
-body {
-	background-color: green;
+	table {
+	font-size: 1.4em;
+	font-weight: bold;
+	color: black;
+    border-collapse: collapse;
+	margin: auto;
+	border: black solid 3px;
+	margin-bottom: 100px;
+	margin-top: 40px;
+	width: 30%;
+	height: 40%;
+	text-align: center;
+	padding-bottom: 100px;
 	}
+    
+    td, th {
+        padding: 25px;
+    }
+    
+    thead {
+        background-color: lightgrey;
+        color: red;
+        border: black solid 3px;
+    }
+    
+	tbody, tr, td, th {
+		border: black solid 3px;
+	}
+	
+    tbody tr:nth-child(odd){
+		background-color: yellow;
+		}
+		
+    tbody tr:nth-child(even) {
+		background-color: lightgreen;
+		}
+	
+	h2 {
+	margin-bottom: -20px
+	}
+	
+	#menu{
+	padding-left: 20px;
+	padding-right: 20px;
+	}
+	body {
+	height: 150%;
+	text-align: center;
+	}
+	
