--- a/styles/luckySevens.css
+++ b/styles/luckySevens.css
@@ -1,6 +1,6 @@
 	table {
 	table-layout: fixed;
-	font-size: 1.4em;
+	font-size: 1;
 	font-weight: bold;
 	color: black;
     border-collapse: collapse;
@@ -8,7 +8,7 @@
 	border: black solid 3px;
 	margin-bottom: 15px;
 	margin-top: 20px;
-	width: 50%;
+	width: 70%;
 	height: 40%;
 	text-align: center;
 	padding-bottom: 100px;
@@ -30,7 +30,7 @@
 	}
 	
     td, th {
-        padding: 25px;
+        padding: 10px;
     }
     
     thead {
@@ -61,10 +61,6 @@
 	color: white;
 	text-align: center;
 	border: black solid 3px;
-	padding: 0;
-	height: 100%;
-	min-height: 1100px;
-	max-width: 1000px;
 	margin: 0 auto;
 	background-image: url("../image/gamble.jpg");
 	background-size: cover;
@@ -102,5 +98,10 @@
 	font-weight: bold;
 	}
 	
+	body {
+		margin: auto;
+	max-height: 60%;
+	max-width: 40%;
+	}
 	
 	
