--- a/styles/luckySevens.css
+++ b/styles/luckySevens.css
@@ -1,6 +1,6 @@
 	table {
 	table-layout: fixed;
-	font-size: 1;
+	font-size: 100%;
 	font-weight: bold;
 	color: black;
     border-collapse: collapse;
@@ -9,28 +9,27 @@
 	margin-bottom: 15px;
 	margin-top: 20px;
 	width: 70%;
-	height: 40%;
+	height: 20%;
 	text-align: center;
-	padding-bottom: 100px;
+	padding-bottom: 12%;
 	}
     
 	h1 {
-	margin-top:40px;
-	margin-bottom: 20px;
 	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-	font-size: 4.5em;
+	font-size: 250%;
 	font-weight:bold;
 	font-style: italic;
 	}
 	
 	h2 {
+	font-size: 130%;
 	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-	padding-bottom: 20px;
 	font-style: italic;
+	margin-bottom: 1%
 	}
 	
     td, th {
-        padding: 10px;
+        padding: 3%;
     }
     
     thead {
@@ -61,39 +60,36 @@
 	color: white;
 	text-align: center;
 	border: black solid 3px;
-	margin: 0 auto;
+	margin: auto;
 	background-image: url("../image/gamble.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	}
 	
 	#betAmount {
+	display: inline;
 	color: black;
-	padding: 10px;
-	margin: 15px;
-	font-size: 1.5em;
+	padding: 1%;
+	margin: 1%;
+	font-size: 90%;
 	font-weight: bold;
 	background-color: lightgrey;
 	text-align: center;
-	margin: auto;
-	width: 100px;
-	height: 60px;
+	width: 10%;
+	height: 80%;
 	}
 	
 	#p2 {
-	margin-top: 30px;
-	margin-bottom: 0px;
-	padding: 20px;
-	font-size: 1.5em;
+	margin-top: 1%;
+	padding: 3%;
+	font-size: 100%;
 	color: White;
 	font-weight: bold;
 	}
 	
 	#playAgain {
-	margin: auto;
-	margin-bottom: 40px;
-	padding: 20px;
-	font-size: 1.5em;
+	padding: 3%;
+	font-size: 100%;
 	color: White;
 	font-weight: bold;
 	}
