--- a/styles/luckySevens.css
+++ b/styles/luckySevens.css
@@ -1,12 +1,12 @@
 	table {
 	table-layout: fixed;
-	font-size: 100%;
+	font-size: 90%;
 	font-weight: bold;
 	color: black;
     border-collapse: collapse;
 	margin: auto;
 	border: black solid 3px;
-	margin-bottom: 15px;
+	margin-bottom: %;
 	margin-top: 20px;
 	width: 70%;
 	height: 20%;
@@ -67,6 +67,7 @@
 	}
 	
 	#betAmount {
+	float: right;
 	display: inline;
 	color: black;
 	padding: 1%;
@@ -75,11 +76,15 @@
 	font-weight: bold;
 	background-color: lightgrey;
 	text-align: center;
-	width: 10%;
-	height: 80%;
+	width: 40%;
+	height: 105%;
 	}
 	
 	#p2 {
+	float: left;
+	height: 105%;
+	width: 40%;
+	margin-left: auto;
 	margin-top: 1%;
 	padding: 3%;
 	font-size: 100%;
@@ -92,6 +97,7 @@
 	font-size: 100%;
 	color: White;
 	font-weight: bold;
+	padding-bottom: 2%;
 	}
 	
 	body {
