--- a/styles/luckySevens.css
+++ b/styles/luckySevens.css
@@ -1,3 +1,9 @@
+/* 
+	Created by Mitch Watson
+	Date Created: 1/3/2020
+	Most recent revision: 1/8/2020 
+*/
+		
 	table {
 	table-layout: fixed;
 	font-size: 90%;
@@ -14,8 +20,8 @@
 	padding-bottom: 12%;
 	}
     
-	h1 {
-	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+	h1 {							
+	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; /* adds outline to text h1*/
 	font-size: 250%;
 	font-weight:bold;
 	font-style: italic;
@@ -23,7 +29,7 @@
 	
 	h2 {
 	font-size: 130%;
-	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; /* adds outline to text h2*/
 	font-style: italic;
 	margin-bottom: 1%
 	}
@@ -44,11 +50,11 @@
 		border: black solid 3px;
 	}
 	
-    tbody tr:nth-child(odd){
+    tbody tr:nth-child(odd){		/*makes odd rows in table yellow*/
 		background-color: yellow;
 		}
 		
-    tbody tr:nth-child(even) {
+    tbody tr:nth-child(even) {		/*makes even rows in table blue*/
 		background-color: #0099ff;
 		}
 	
